Added mouse events - click will give nearest slots - highlighted by the corresponding colour

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -14,7 +14,7 @@ and open the template in the editor.
     <body>
         <div>Creating the image of a breadboard</div>
         
-        <canvas id="myCanvas" width="1200" height="2000"></canvas>
+        <canvas id="myCanvas" ></canvas>
         <script src =" breadboard_creation_events.js"></script>
     </body>
 </html>
