7 segment display motion and slot placing implemented -- Only display of numbers left

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -16,5 +16,11 @@ and open the template in the editor.
         
         <canvas id="myCanvas" ></canvas>
         <script src =" breadboard_creation_events.js"></script>
+        <script src =" seven_segment_display.js"></script>
+        <script src =" mouse_events.js"></script>
+        <select name = "menu1" >
+            <option value =" one" >One</option>
+            <option value =" two">Two</option>
+        </select>
     </body>
 </html>
