Generalised code for adding multiple elements.

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -20,10 +20,10 @@ and open the template in the editor.
   <dt id="ic-header" onmouseover="ddMenu('ic',1)" onmouseout="ddMenu('ic',-1)" >Select IC's</dt>
   <dd id="ic-content" onmouseover="cancelHide('ic')" onmouseout="ddMenu('ic',-1)" >
     <ul id="ic_list1">
-        <li onmousedown="display_ic(bread_board_x,bread_board_y,7447)">7447<br></li>
-        <li onmousedown="display_ic(bread_board_x,bread_board_y,7485)">7485<br></li>
-        <li onmousedown="display_ic(bread_board_x,bread_board_y,7483)">7483<br></li>
-        <li onmousedown="display_7segment(bread_board_x,bread_board_y)">7 Segment Display<br></li>
+        <li onmousedown="initialise_ic(bread_board_x,bread_board_y,7447)">7447<br></li>
+        <li onmousedown="initialise_ic(bread_board_x,bread_board_y,7485)">7485<br></li>
+        <li onmousedown="initialise_ic(bread_board_x,bread_board_y,7483)">7483<br></li>
+        <li onmousedown="initialise_7segment(bread_board_x,bread_board_y)">7 Segment Display<br></li>
     </ul>
   </dd>
 </dl>
