Added the code for resistors

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -24,6 +24,7 @@ and open the template in the editor.
         <li onmousedown="initialise_ic(bread_board_x,bread_board_y,7485)">7485<br></li>
         <li onmousedown="initialise_ic(bread_board_x,bread_board_y,7483)">7483<br></li>
         <li onmousedown="initialise_7segment(bread_board_x,bread_board_y)">7 Segment Display<br></li>
+        <li onmousedown="initialise_resistor(bread_board_x,bread_board_y)">Resistor<br></li>
     </ul>
   </dd>
 </dl>
@@ -38,6 +39,7 @@ and open the template in the editor.
         
         <script type="text/javascript" src="drop.js"></script>
         <script type="text/javascript" src="ic_generate.js"></script>
+        <script type="text/javascript" src="resistor.js"></script>
         <script src =" seven_segment_display.js"></script> 
         <script src =" mouse_events.js"></script>
         
