Added short wire

--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -25,6 +25,7 @@ and open the template in the editor.
         <li onmousedown="initialise_ic(bread_board_x,bread_board_y,7483)">7483<br></li>
         <li onmousedown="initialise_7segment(bread_board_x,bread_board_y)">7 Segment Display<br></li>
         <li onmousedown="initialise_resistor(bread_board_x,bread_board_y)">Resistor<br></li>
+        <li onmousedown="initialise_short()">Short wire<br></li>
     </ul>
   </dd>
 </dl>
@@ -42,6 +43,7 @@ and open the template in the editor.
         <script type="text/javascript" src="resistor.js"></script>
         <script src =" seven_segment_display.js"></script> 
         <script src =" mouse_events.js"></script>
+        <script src =" short_wire.js"></script>
         
 
 
